--- a/chat-websocket/pom.xml
+++ b/chat-websocket/pom.xml
@@ -20,6 +20,11 @@
 		<artifactId>vertx-core</artifactId>
 		<version>3.3.3</version>
 	</dependency>
+	<dependency>
+		<groupId>com.rabbitmq</groupId>
+		<artifactId>amqp-client</artifactId>
+		<version>3.5.1</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
